2011-12-25  Mikolaj Izdebski  <zurgunt@gmail.com>

	Remove unused constant definition
	* yambi/yambi.h: Remove YB_CANCELED macro definition.

2011-12-23  Mikolaj Izdebski  <zurgunt@gmail.com>

	Import new test case -- load0
	* tests/load0.bz2: Initial version.
	* tests/Makefile.am: Add load0.bz2 as a new test.

	Limit time and memory usage during tests
	* tests/timeout.c: Initial version.
	* tests/Makefile.am: Build timeout from timeout.c.
	* tests/Tester: Try limiting virtual memory usage with `ulimit -v'.
	Run decompresion subprocesses with alarm set to 1 minute.

	Make minbzcat be more compatible with bzip2
	* tests/minbzcat.c (main): Count block size digit as part of stream
	header. Fixes #3.

	Add check for fatal signals in tester
	* tests/Tester: Add checks for subprocess exit codes >= 128. All tests
	in which either lbzip2 or minbzcat exited because of unhandled signals
	are treated as failed.

2011-12-04  Mikołaj Izdebski  <zurgunt@gmail.com>

	Add two more test cases.
	* tests/incomp: Initial version.
	* tests/incomp-1.bz2, tests/incomp-2.bz2: Generate using tests/incomp.
	* tests/README: Update to mention incomp-[12].bz2.
	* tests/Makefile.am: Add the new test cases.

	Fix bug #5
	* src/lbunzip2.c (work_decompr): Assign w2w_blk->bs100k
	to w2m_blk->bs100k only if YB_OK == ybret. Fixes: #5. This bug caused
	files with input blocks larger than 1 MiB to be rejected by lbunzip2.
	* tests/ch255.bz2: Add as a regression test for bug #5.
	* tests/Makefile.am: Re-enable crc1.bz2, add ch255.bz2.

	Workaround bug #5
	* src/lbunzip2.c (mux): Disable stream CRC check. Fixes #5.
	* tests/Makefile.am: Exclude crc1.bz2 from test cases.

2011-11-24  Mikołaj Izdebski  <zurgunt@gmail.com>

	Get rid of AM_MAINTAINER_MODE
	* configure.ac: Remove AM_MAINTAINER_MODE, which was included by
	accident.

2011-11-23  Mikołaj Izdebski  <zurgunt@gmail.com>

	Bump version to 2.1

	Fix a use-after-free vulnerability in lbunzip2